--- a/index.html
+++ b/index.html
@@ -9,40 +9,52 @@
 <body>
     
     <div>
-        <a href="./src/new.html"> New Html</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/new.html"> New Html</a>
     </div>
     <div>
-        <a href="./src/new1.html"> New Html 1</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/new1.html"> New Html 1</a>
     </div>
     <div>
-        <a href="./src/new2.html"> New Htm2</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/new2.html"> New Htm2</a>
     </div>
     <div>
-        <a href="./src/new3.html"> New Htm3</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/new3.html"> New Htm3</a>
     </div>
     <div>
-        <a href="./src/new4.html"> New Html4</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/new4.html"> New Html4</a>
     </div>
     <div>
-        <a href="./src/new5.html"> New Html5</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/new5.html"> New Html5</a>
     </div>
     <div>
-        <a href="./src/new6.html"> New Html6</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/new6.html"> New Html6</a>
     </div>
     <div>
-        <a href="./src/new7.html"> New Html7</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/new7.html"> New Html7</a>
     </div>
     <div>
-        <a href="./src/pagea.html"> Pagea</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/pagea.html"> Pagea</a>
     </div>
     <div>
-        <a href="./src/pageb.html"> Pageb</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/pageb.html"> Pageb</a>
     </div>
     <div>
-        <a href="./src/pagec.html"> Pagec</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/pagec.html"> Pagec</a>
     </div>
     <div>
-        <a href="./src/paged.html"> Paged</a>
+        <a href="https://js-basic-lessons-smoky.vercel.app/src/paged.html"> Paged</a>
+    </div>
+    <div>
+        <a href="./tip-calculator-app-main/index.html">Tip calculator</a>
+    </div>
+    <div>
+        <a href="./faq-accordion-card-main/index.html"> FAQ Card</a>
+    </div>
+    <div>
+        <a href="./article-preview-component-master/index.html"> Article Preview</a>
+    </div>
+    <div>
+        <a href="./intro-component-with-signup-form-master/index.html"> Intro Signup</a>
     </div>
 </body>
 </html>
