--- a/index.html
+++ b/index.html
@@ -56,5 +56,8 @@
     <div>
         <a href="./intro-component-with-signup-form-master/index.html"> Intro Signup</a>
     </div>
+    <div>
+        <a href="./time-tracking-dashboard-main/index.html"> Time Tracking</a>
+    </div>
 </body>
 </html>
