--- a/index.html
+++ b/index.html
@@ -59,5 +59,20 @@
     <div>
         <a href="./time-tracking-dashboard-main/index.html"> Time Tracking</a>
     </div>
+    <div>
+        <a href="./calculator-app-main/index.html">Calculator</a>
+    </div>
+    <div>
+        <a href="./sunnyside-agency-landing-page-main/index.html"> Sunnyside</a>
+    </div>
+    <div>
+        <a href="./time-tracking-dashboard-main/index.html"> Time Tracking</a>
+    </div>
+    <div>
+        <a href="./launch-countdown-timer-main/index.html"> Launch Countdown</a>
+    </div>
+    <div>
+        <a href="./coding-bootcamp-testimonials-slider-master/">Bootcamp Slider</a>
+    </div>
 </body>
 </html>
