--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div>
+        <a href="./challenges/insure-landing-page-master/index.html">Insure Landing Page</a>
+    </div>
     <div>
         <a href="https://js-basic-lessons-smoky.vercel.app/src/new.html"> New Html</a>
     </div>
@@ -75,4 +79,5 @@
         <a href="./coding-bootcamp-testimonials-slider-master/">Bootcamp Slider</a>
     </div>
 </body>
+
 </html>
