--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 
 <body>
     <div>
-        <a href="./challenges/insure-landing-page-master/index.html">Insure Landing Page</a>
-    </div>
-    <div>
         <a href="https://js-basic-lessons-smoky.vercel.app/src/new.html"> New Html</a>
     </div>
     <div>
@@ -49,6 +46,9 @@
         <a href="https://js-basic-lessons-smoky.vercel.app/src/paged.html"> Paged</a>
     </div>
     <div>
+        <a href="./challenges/insure-landing-page-master/index.html">Insure Landing Page</a>
+    </div>
+    <div>
         <a href="./tip-calculator-app-main/index.html">Tip calculator</a>
     </div>
     <div>
@@ -64,19 +64,19 @@
         <a href="./time-tracking-dashboard-main/index.html"> Time Tracking</a>
     </div>
     <div>
-        <a href="./calculator-app-main/index.html">Calculator</a>
+        <a href="./challenges/calculator-app-main/index.html">Calculator</a>
     </div>
     <div>
-        <a href="./sunnyside-agency-landing-page-main/index.html"> Sunnyside</a>
+        <a href="./challenges/sunnyside-agency-landing-page-main/index.html"> Sunnyside</a>
     </div>
     <div>
-        <a href="./time-tracking-dashboard-main/index.html"> Time Tracking</a>
+        <a href="./challenges/time-tracking-dashboard-main/index.html"> Time Tracking</a>
     </div>
     <div>
         <a href="./launch-countdown-timer-main/index.html"> Launch Countdown</a>
     </div>
     <div>
-        <a href="./coding-bootcamp-testimonials-slider-master/">Bootcamp Slider</a>
+        <a href="./challenges/coding-bootcamp-testimonials-slider-master/index.html">Bootcamp Slider</a>
     </div>
 </body>
 
