--- a/challenges/sunnyside-agency-landing-page-main/index.html
+++ b/challenges/sunnyside-agency-landing-page-main/index.html
@@ -4,14 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <!-- displays site properly based on user's device -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"> <!-- favicon -->
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="./themes/style.css">
+    rel="stylesheet"> <!-- Site google fonts link -->
+  <link rel="stylesheet" href="./themes/style.css"> <!-- link to css file -->
   <title>Sunnyside agency landing page</title>
 </head>
 
 <body>
+
+  <!-- Hero section starts here -->
   <section class="hero">
     <header>
       <a href="index.html"><img src="./images/logo.svg" alt="Sunnyside’s logo"></a>
@@ -30,6 +33,8 @@
       <img src="images/icon-arrow-down.svg" alt="icon arrow down">
     </div>
   </section>
+
+  <!-- Mobile Navigation starts here -->
   <div class="mobile-nav" id="mobileNav">
     <nav>
       <ul>
@@ -40,6 +45,9 @@
       </ul>
     </nav>
   </div>
+
+
+  <!-- Features section starts here -->
   <section class="features">
     <article>
       <div class="left-col">
@@ -52,6 +60,7 @@
           <a href="#">Learn more</a>
         </div>
       </div>
+
       <div class="right-col">
         <picture>
           <source media="(max-width: 375px)" srcset="images/mobile/image-transform.jpg">
@@ -59,6 +68,7 @@
         </picture>
       </div>
     </article>
+
     <article>
       <div class="right-col">
         <picture>
@@ -77,6 +87,7 @@
         </div>
       </div>
     </article>
+
     <article>
       <div class="left-col">
         <div class="left-col-text">
@@ -98,6 +109,8 @@
       </div>
     </article>
   </section>
+
+  <!-- Testimonials-->
   <section class="testimonials">
     <h3>Client testimonials</h3>
     <div class="testimonial-row">
@@ -135,6 +148,8 @@
       </div>
     </div>
   </section>
+
+  <!-- Picture Gallery starts here -->
   <div class="gallery">
     <picture>
       <source media=(max-width: 375px) srcset="images/mobile/image-gallery-milkbottles.jpg">
@@ -153,6 +168,8 @@
       <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="sugar cubes">
     </picture>
   </div>
+
+  <!-- Footer starts here -->
   <footer>
     <nav>
       <a href="#"><img src="images/logo.svg" alt="Sunnyside’s logo"></a>
@@ -162,18 +179,21 @@
         <li><a href="#">Projects</a></li>
       </ul>
     </nav>
+
     <ul>
       <li><a href="#"><img src="images/icon-facebook.svg" alt="facebook icon"></a></li>
       <li><a href="#"><img src="images/icon-instagram.svg" alt="instagram icon"></a></li>
       <li><a href="#"><img src="images/icon-twitter.svg" alt="twitter icon"></a></li>
       <li><a href="#"><img src="images/icon-pinterest.svg" alt="pinterest icon"></a></li>
     </ul>
+
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="" target="_blank">Savitha</a>.
+      Coded by <a href="https://github.com/uzoway" target="_blank">Uzoway</a>.
     </div>
   </footer>
-  <script src="./themes/style.css"></script>
+
+  <script src="./js.script/script.js"></script> <!-- link to js file -->
 </body>
 
 </html>
