--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a href="./challenges/intro-component-with-signup-form-master/index.html"> Intro Signup</a>
     </div>
     <div>
-        <a href="./challenges/time-tracking-dashboard-main/index.html"> Time Tracking</a>
+        <a href="./challenges/interactive-pricing-component-main/index.html"> Interactive Pricing</a>
     </div>
     <div>
         <a href="./challenges/calculator-app-main/index.html">Calculator</a>
