--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
     <div>
         <a href="./challenges/coding-bootcamp-testimonials-slider-master/index.html">Bootcamp Slider</a>
     </div>
+    <div>
+        <a href="./challenges/base-apparel-coming-soon-master/index.html">Base Apperel</a>
+    </div>
+    <div>
+        <a href="./challenges/ping-coming-soon-page-master/index.html">Ping</a>
+    </div>
+    <div>
+        <a href="./challenges/pricing-component-with-toggle-master/index.html">Pricing Component</a>
+    </div>
+
 </body>
 
 </html>
