--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
     <div>
         <a href="./challenges/pricing-component-with-toggle-master/index.html">Pricing Component</a>
     </div>
+    <div>
+        <a href="./src/currency.html">currency</a>
+    </div>
 
 </body>
 
