--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <div>
+        <a href="./src/Rt-pcr/test.html"> Test Report</a>
+    </div>
+    <div>
         <a href="https://js-basic-lessons-smoky.vercel.app/src/new.html"> New Html</a>
     </div>
     <div>
