--- a/src/Rt-pcr/test.html
+++ b/src/Rt-pcr/test.html
@@ -121,9 +121,10 @@
         <label for="valueTosearch" id="search">
             <h3>Enter Aadhar Number </h3>
         </label>
-        <input id="searchTerm" class="form-control" placeholder="Enter number" onkeyup="doSearch()">
+        <input id="searchTerm" class="form-control" placeholder="Enter number">
+        <button type="submit" value="search" id="search1">Search</button>
     </div>
-    <script type="text/javascript" src="./test.js">
+    <script type="module" src="./test.js">
     </script>
 </body>
 
