--- a/src/ng-workspace/demoa-app/src/index.html
+++ b/src/ng-workspace/demoa-app/src/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <app-header></app-header>
-    <my-root></my-root>
+    <app-root></app-root>
     <app-footer></app-footer>
   </div>
   <!-- <app-boxs></app-boxs> -->
