--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
     <div>
         <a href="./src/currency.html">currency</a>
     </div>
+    <div>
+        <a href="./src/ng-workspace/demoa-app/src/index.html">currency</a>
+    </div>
 
 </body>
 
