--- a/src/currency.html
+++ b/src/currency.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,7 +32,7 @@
             </tr>
         </table>
     </form>
-    <script type="module" src="./money.js"></script>
+    <script type="module" src="money.js"></script>
 </body>
 
 </html>
